--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -9,8 +9,6 @@
     <link rel="icon" type="image/x-icon" href="{% static 'images/GGicon.png' %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
-
 	<!-- title -->
 	<title>Age Estimation</title>
 	<!-- favicon -->
@@ -51,15 +49,13 @@
 
       
 
-        #video-container, #captured-image {
+        #video-container, #captured-image, #video-container img  {
             border-radius: 4%;
             border-color: #ff069a;
             border-width: 2px;
             position: relative;
             margin: 0;
             padding: 0;
-            top: 140px;
-            right: -420px;
         }
 
         #video-stream {
@@ -71,7 +67,6 @@
             margin: 0;
             padding: 0;
         }
-
 
         .inst-container {
             text-align: center;
@@ -136,6 +131,12 @@
             list-style-type: none;
         }
 
+        #take-snapshot-button{
+width: 20%;
+font-size: 20px;
+}
+
+
 .popup {
   display: none;
   position: fixed;
@@ -144,6 +145,7 @@
   width: 100%;
   height: 100%;
   padding:10% 5%;
+  left: 0;
 }
 
 .popup-content {
@@ -154,7 +156,6 @@
   border: 1px solid #ccc;
   border-radius: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-
   padding: 20px;
   width: 40%;
 
@@ -177,7 +178,7 @@
 }
 
 .site-logo img{
-  width: 200px;
+    width: 200px;
     height: 100px;
 	position: relative;
 	left: -25px;
@@ -185,8 +186,474 @@
 body img{
   max-width: 600px;
 }
+.emailSentSuccess{
+    width: 106%
+}
+
+@media screen and (max-width: 1280px){
+.emailSentSuccess {
+    left: -18%;
+    top: -18%;
+    width: 120%;
+}
+}
 
 
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+.emailSentSuccess {
+    top: -130%;
+}
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1000px){
+.emailSentSuccess {
+    left: -26%;
+    width: 147%;
+    top: -204%;
+}
+}
+
+
+@media screen and (max-width: 920px){
+.emailSentSuccess {
+    left: -33%;
+    width: 163%;
+    top: -146%;
+}
+}
+
+@media screen and (max-width: 853px){
+.emailSentSuccess {
+    left: -40%;
+    width: 177%;
+    top: -156%;
+}
+}
+
+@media screen and (max-width: 820px){
+.emailSentSuccess {
+    left: -37%;
+}
+}
+
+@media screen and (max-width: 768px){
+.emailSentSuccess {
+    top: -172%;
+    left: -37%;
+    width: 170%;
+}
+}
+
+@media screen and (max-width: 540px){
+.emailSentSuccess {
+    left: -43%;
+    width: 184%;
+    top: -236%;
+
+}
+}
+
+
+@media screen and (max-width: 450px){
+.emailSentSuccess {
+    width: 213%;
+    left: -57%;
+    top: -204%;
+}
+}
+
+@media screen and (max-width: 375px){
+.emailSentSuccess {
+    top: -242%;
+    width: 214%;
+    left: -57%
+}
+}
+
+@media screen and (max-width: 280px){
+.emailSentSuccess {
+    top: -254%;
+    width: 227%;
+    left: -64%;
+}
+}
+
+
+@media screen and (max-width: 1024px) and (max-height: 1400px) {
+    #instructions, .Popup {
+        height: 58%;
+        width: 168%;
+        position: relative;
+        left: -33%;
+        top: 14%;
+    }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+    .Popup {
+    top: -135%;
+}
+}
+
+
+@media screen and (max-width: 1024px) and (max-height: 700px) {
+    #instructions, .Popup {
+        height: 125%;
+        width: 134%;
+        position: relative;
+        left: -17%;
+        top: 0%;
+    }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 700px) {
+    .Popup {
+        top: -204%;
+    }
+}
+
+
+
+@media screen and (height: 1300px) {
+    #instructions, .Popup {
+        height: 125%;
+        width: 134%;
+        position: relative;
+        left: -17%;
+        top: 0%;
+    }
+}
+
+
+@media screen and (max-width: 920px) {
+    .Popup {
+        height: 65%;
+        width: 176%;
+        left: -38%;
+        top: -155%;
+    }
+}
+
+
+@media screen and (max-width: 870px) {
+    #instructions, .Popup {
+        height: 65%;
+        width: 155%;
+        position: relative;
+        left: -29%;
+        top: 18%;
+    }
+}
+
+@media screen and (max-width: 870px){
+ .Popup {
+    height: 65%;
+    width: 165%;
+    left: -36%;
+    top: -153%;
+}
+}
+
+@media screen and (max-width: 768px) and (max-height: 1024px){
+    .Popup {
+    height: 65%;
+    width: 187%;
+    left: -45%;
+    top: -174%;
+}
+}
+
+@media screen and (max-width: 600px) {
+    #instructions, .Popup {
+        height: 90%;
+        width: 230%;
+        position: relative;
+        left: -65%;
+        top: 17%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .Popup {
+        top: -200%;
+    }
+}
+
+@media screen and (max-width: 540px){
+    .Popup {
+    top: -234%;
+}}
+
+
+@media screen and (max-width: 400px) {
+    #instructions, .Popup {
+        height: 106%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .Popup {
+        top: -203%;
+    }
+}
+
+@media screen and (max-width: 375px){
+   .Popup {
+    top: -240%;
+}
+}
+
+@media screen and (max-width: 280px) {
+    .Popup {
+        top: -250%;
+    }
+}
+
+
+
+@media screen and (max-width: 1500px) {
+    #video-stream, #captured-image, #video-container img  {
+        position: relative;
+        top: 135px;
+        right: -24%;
+        width: 91%;
+
+}
+}
+@media screen and (max-width: 1500px) {
+    #take-snapshot-button {
+        width: 20%;
+        top: 140px;
+        left: 576px;
+}
+}
+
+
+@media screen and (max-width: 1280px) {
+    #video-stream, #captured-image, #video-container img  {
+        position: relative;
+        top: 180px;
+        right: -15%;
+        width: 91%;
+
+}
+}
+@media screen and (max-width: 1280px) {
+    #take-snapshot-button {
+        width: 20%;
+        top: 188px;
+        left: 525px;
+}
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+    #video-stream, #captured-image, #video-container img  {
+    top: 203px;
+    right: 9%;
+    width: 127%;
+}
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+    #take-snapshot-button {
+        top: 210px;
+        width: 35%;
+        left: 338px;
+        font-size: 32px;
+}
+}
+
+
+@media screen and (max-width: 1024px) and (max-height: 600px) {
+    #video-stream, #captured-image, #video-container img  {
+        position: relative;
+        top: 92px;
+        right: -15%;
+        width: 86%;
+
+}
+}
+@media screen and (max-width: 1024px) and (max-height: 600px){
+    #take-snapshot-button {
+        top: 98px;
+        left: 428px;
+        width: 24%;
+
+}
+}
+
+@media screen and (max-width: 912px) {
+    #video-stream, #captured-image, #video-container img  {
+        top: 216px;
+        right: -2%;
+        width: 129%;
+}
+}
+
+@media screen and (max-width: 912px) {
+    #take-snapshot-button {
+        font-size: 30px;
+        top: 222px;
+        left: 305px;
+        width: 39%;
+}
+}
+
+
+
+@media screen and (max-width: 853px) {
+    #video-stream, #captured-image, #video-container img  {
+        right: -8%;
+        top: 210px;
+        width: 104%;
+}
+}
+
+@media screen and (max-width: 853px) {
+    #take-snapshot-button {
+        font-size: 27px;
+        top: 216px;
+        left: 298px;
+        width: 34%;
+}
+}
+
+
+@media screen and (max-width: 540px) {
+    #video-stream, #captured-image, #video-container img  {
+        right: -11%;
+        top: 176px;
+        width: 78%;
+}
+}
+
+@media screen and (max-width: 540px) {
+    #take-snapshot-button {
+        font-size: 17px;
+        top: 181px;
+        left: 180px;
+        width: 36%;
+}
+}
+
+@media screen and (max-width: 430px) {
+    #take-snapshot-button {
+        font-size: 16px;
+        top: 181px;
+        left: 131px;
+        width: 41%;
+}
+}
+
+
+@media screen and (max-width: 412px) {
+    #video-stream, #captured-image, #video-container img  {
+        top: 228px;
+        right: -8%;
+        width: 88%;
+}
+}
+
+@media screen and (max-width: 412px) {
+    #take-snapshot-button {
+        top: 234px;
+        left: 127px;
+        width: 42%;
+        font-size: 14px;
+}
+}
+
+
+@media screen and (max-width: 280px) {
+    #video-stream, #captured-image, #video-container img  {
+        top: 168px;
+        right: -7%;
+        width: 88%;
+}
+}
+
+@media screen and (max-width: 280px) {
+    #take-snapshot-button {
+        top: 172px;
+        left: 79px;
+        width: 48%;
+        font-size: 12px;
+}
+}
+
+
+@media screen and (max-width: 1280px){
+    .site-logo img{
+        width: 211px;
+        height: 111px;
+        left: 47px;
+}
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+    .site-logo img{
+        width: 200px;
+        height: 100px;
+        left: 76px;
+}
+}
+
+
+@media screen and (max-width: 912px) {
+.site-logo img{
+    width: 239px;
+    height: 142px;
+    left: 9px;
+}
+}
+
+@media screen and (max-width: 853px) {
+.site-logo img{
+    left: 80px;
+}
+}
+
+@media screen and (max-width: 540px) {
+.site-logo img{
+    width: 183px;
+    height: 112px;
+    left: 81px;
+}
+}
+
+@media screen and (max-width: 430px) {
+.site-logo img{
+    left: 82px;
+}
+}
+
+@media screen and (max-width: 412px) and (max-height: 915px){
+    .site-logo img{
+        width: 183px;
+        height: 112px;
+}
+}
+
+@media screen and (max-width: 412px) and (max-height: 914px){
+    .site-logo img{
+        left: 86px;
+}
+}
+
+
+@media screen and (max-width: 390px) {
+.site-logo img{
+    left: 84px;
+}
+}
+
+@media screen and (max-width: 280px) {
+.site-logo img{
+    width: 122px;
+    height: 90px;
+    left: -24px;
+}
+}
 
     </style>
 <body>
@@ -224,8 +691,6 @@ body img{
     <!-- End Header -->
 
     <section id="main-content">
-
-    
         <!-- Instructions Container -->
         <div class="inst-container" id="instructions">
             <div id="popup">
@@ -241,17 +706,17 @@ body img{
         <!-- Video Container -->
         <div class="container" id="video-container">
             <div class="row">
-                <div class="col-lg-8 offset-lg- text-center">
+                <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 text-center">
                     <br>
                     <video id="video-stream" autoplay playsinline></video>
                     <img id="captured-image" src="" alt="Captured Image" style="display: none;">
                 </div>
-            </div> <!-- End class row -->
-        </div> <!-- End class container -->
+            </div>
+        </div>
     
-                    <div id="button-container">
-                        <a id="take-snapshot-button" disabled class="boxed-btn" style="display:none; width: 20%; font-size: 20px; text-align: center; position: relative; top:150px; left: 600px;">Take Snapshot</a> <br>
-                    </div>
+        <div id="button-container" class="text-center">
+            <a id="take-snapshot-button" disabled class="boxed-btn" style="display:none; text-align: center; position: relative;">Take Snapshot</a> <br>
+        </div>
     </section>
     
   <!-- footer -->
@@ -608,9 +1073,9 @@ body img{
                 <div class="popup-content">
                     <div id="sendRequestTrigger" style="display: none;"></div>
                     <h4 style="line-height: unset; margin-bottom: 20px; margin-top: 20px; font-size: 20px; font-weight: inherit;">Seems like you are having trouble getting your right estimated age group</h4>
-                    <h4 style="font-size: 20px; font-weight: inherit;">We have sent to your registered email address with Game Geek to help you resolve this issue.</h4>
-                    <h7>If you haven't received an email, please ensure that yout registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
-                    <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+                    <h4 style="font-size: 20px; font-weight: inherit;">Do not worry! We will send to your regeistred email in Game Geek to solve the issue</h4>
+                    {% csrf_token %}
+                    <button type="button" id="sendButton" onclick="sendEmail()" style="width: 40%; font-size: larger; font-weight: 700; margin-left: 32%;">Send</button>
                 </div>
             </div>
 
@@ -652,7 +1117,7 @@ body img{
         </form>
     </div>
 </div>
-<div id="emailSentSuccess" class="popup Success" style="width: 106%;">
+<div class="emailSentSuccess Popup">
     <div class="popup-content">
         <h3>Assign age group reset Link Sent &nbsp;<i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
         <h5>An age group reset link has been sent to your registred email address. Please check your inbox, including your spam folder, and follow the link to reset your age group.</h5>
@@ -660,6 +1125,16 @@ body img{
         <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
     </div>
 </div>
+
+<div class="emailSentSuccess Popup">
+    <div class="popup-content">
+        <h3>A redirect link to your corresponding age group reset has been sent &nbsp;<i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
+        <h5>A redirect link to your corresponding age group account has been sent to your registered email address. Please check your inbox, including your spam folder.</h5>
+		<h7>If you haven't received an email, please ensure that yout registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
+        <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+    </div>
+</div>
+
 <script>
 if (status === 'done') {
     // Display done pop-up
@@ -689,7 +1164,7 @@ xhr.setRequestHeader("X-CSRFToken", csrftoken);
 
 xhr.onload = function () {
     if (xhr.status === 200) {
-        document.getElementById('emailSentSuccess').style.display = 'block';
+        document.getElementsByClassName('emailSentSuccess')[0].style.display = 'block';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('send').style.display = 'none';
     } else if (xhr.status === 404) {
@@ -699,6 +1174,40 @@ xhr.onload = function () {
     }
 };
 xhr.send();
+}
+
+function sendEmail(){
+var csrftoken = getCookie('csrftoken');
+var xhr = new XMLHttpRequest();
+xhr.open('POST', "{% url 'CompareAgeGroups' %}", true);
+xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+
+// Set the CSRF token and session ID in the request headers
+xhr.setRequestHeader("X-CSRFToken", csrftoken);
+
+xhr.onload = function () {
+    if (xhr.status === 200) {
+        document.getElementsByClassName('emailSentSuccess')[0].style.display = 'block';
+        document.getElementById("instructions").style.display = "none";
+        document.getElementById('sendlogin').style.display = 'none';
+        var response = JSON.parse(xhr.responseText);
+        if(response.message === 'Matching'){
+            htmlContent = '<h4 style="line-height: unset; margin-bottom: 20px; margin-top: 20px; font-size: 20px; font-weight: inherit;">Your estimated age is accurate, dive into your gaming adventure by clicking on <a id="next-button" class="boxed-btn" href="{% url "Games" %}">Next</a></h4>';
+            container.innerHTML = htmlContent;
+            console.log(xhr.responseText);}
+        else if(response.message === 'Not Matching'){
+            htmlContent = '<h4 style="line-height: unset; margin-bottom: 20px; margin-top: 20px; font-size: 20px; font-weight: inherit;">Your registered age group not matching your current estimated age group. Feel free to try again! <a id="retake-button" class="boxed-btn" onclick="dis()">Retake</a> </h4>';
+            container.innerHTML = htmlContent;
+        }
+    } else if (xhr.status === 404) {
+        document.getElementById('sendlogin').style.display = 'none';
+        document.getElementById("instructions").style.display = "none";
+        document.getElementById('errorPopUp').style.display = 'block';
+    }
+};
+xhr.send();
+
 }
 // Function to get the CSRF token from the cookie
 function getCookie(name) {
