--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -1129,7 +1129,7 @@ $('input[type="checkbox"]').each(function () {
 	</div>
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<div class="pagination-wrap">
+					<div class="pagination-wrap" id="punc">
     <ul class="paginationList">
 
         <li><a href="?page={{ games.previous_page_number }}" class="edg">Prev</a></li>
@@ -1321,6 +1321,9 @@ console.log(response)
 
             if(response.filter_status === "no games satisfies the filter") {
             document.getElementById('myModal').style.display = 'block';
+            if(response.count<=12){
+            document.getElementById('punc').style.marginTop = '133%';
+            }
 
 
 
