--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -187,97 +187,8 @@ body img{
   max-width: 600px;
 }
 .emailSentSuccess{
-    width: 106%
+    width: 107%
 }
-
-@media screen and (max-width: 1280px){
-.emailSentSuccess {
-    left: -18%;
-    top: -18%;
-    width: 120%;
-}
-}
-
-
-@media screen and (max-width: 1024px) and (max-height: 1400px){
-.emailSentSuccess {
-    top: -130%;
-}
-}
-
-@media screen and (max-width: 1024px) and (max-height: 1000px){
-.emailSentSuccess {
-    left: -26%;
-    width: 147%;
-    top: -204%;
-}
-}
-
-
-@media screen and (max-width: 920px){
-.emailSentSuccess {
-    left: -33%;
-    width: 163%;
-    top: -146%;
-}
-}
-
-@media screen and (max-width: 853px){
-.emailSentSuccess {
-    left: -40%;
-    width: 177%;
-    top: -156%;
-}
-}
-
-@media screen and (max-width: 820px){
-.emailSentSuccess {
-    left: -37%;
-}
-}
-
-@media screen and (max-width: 768px){
-.emailSentSuccess {
-    top: -172%;
-    left: -37%;
-    width: 170%;
-}
-}
-
-@media screen and (max-width: 540px){
-.emailSentSuccess {
-    left: -43%;
-    width: 184%;
-    top: -236%;
-
-}
-}
-
-
-@media screen and (max-width: 450px){
-.emailSentSuccess {
-    width: 213%;
-    left: -57%;
-    top: -204%;
-}
-}
-
-@media screen and (max-width: 375px){
-.emailSentSuccess {
-    top: -242%;
-    width: 214%;
-    left: -57%
-}
-}
-
-@media screen and (max-width: 280px){
-.emailSentSuccess {
-    top: -254%;
-    width: 227%;
-    left: -64%;
-}
-}
-
 
 @media screen and (max-width: 1024px) and (max-height: 1400px) {
     #instructions, .Popup {
@@ -397,11 +308,6 @@ body img{
     }
 }
 
-@media screen and (max-width: 375px){
-   .Popup {
-    top: -240%;
-}
-}
 
 @media screen and (max-width: 280px) {
     .Popup {
@@ -499,6 +405,92 @@ body img{
 }
 }
 
+@media screen and (max-width: 1280px){
+.emailSentSuccess {
+    left: -18%;
+    top: -18%;
+    width: 120%;
+}
+}
+
+
+@media screen and (max-width: 1024px) and (max-height: 1400px){
+.emailSentSuccess {
+    top: -130%;
+}
+}
+
+@media screen and (max-width: 1024px) and (max-height: 1000px){
+.emailSentSuccess {
+    left: -26%;
+    width: 147%;
+    top: -204%;
+}
+}
+
+
+@media screen and (max-width: 920px){
+.emailSentSuccess {
+    left: -33%;
+    width: 163%;
+    top: -146%;
+}
+}
+
+@media screen and (max-width: 853px){
+.emailSentSuccess {
+    left: -40%;
+    width: 177%;
+    top: -156%;
+}
+}
+
+@media screen and (max-width: 820px){
+.emailSentSuccess {
+    left: -37%;
+}
+}
+
+@media screen and (max-width: 768px){
+.emailSentSuccess {
+    top: -172%;
+    left: -37%;
+    width: 170%;
+}
+}
+
+@media screen and (max-width: 540px){
+.emailSentSuccess {
+    left: -43%;
+    width: 184%;
+    top: -236%;
+
+}
+}
+
+
+@media screen and (max-width: 450px){
+.emailSentSuccess {
+    width: 213%;
+    left: -57%;
+    top: -204%;
+}
+}
+
+@media screen and (max-width: 375px){
+.emailSentSuccess {
+    width: 214%;
+    left: -57%
+}
+}
+
+@media screen and (max-width: 280px){
+.emailSentSuccess {
+    top: -254%;
+    width: 227%;
+    left: -64%;
+}
+}
 
 
 @media screen and (max-width: 853px) {
@@ -913,7 +905,7 @@ body img{
             if (PageName === 'signup') {
                 //alert('hello from signup');
                 var container = document.getElementById('containerDive');
-                var htmlContent = '<h4 style="line-height: unset; margin-bottom: 20px; margin-top: 20px; font-size: 20px; font-weight: inherit;">If your classification is accurate, dive into your gaming adventure by clicking on <a id="next-button" class="boxed-btn" href="{% url "Games" %}">Next</a></h4>';
+                var htmlContent = '<h4 style="line-height: unset; margin-bottom: 20px; margin-top: 20px; font-size: 20px; font-weight: inherit;">If your classification is accurate, Click on next to confirm your regisetration by clicking on <a id="next-button" class="boxed-btn" onclick= "confirm()">Next</a></h4>';
                 container.innerHTML = htmlContent;
             } else if (PageName === 'login') {
                // alert('im here in login');
@@ -1093,7 +1085,7 @@ body img{
             <input type="radio" name="ageGroup" value="+17">
             +17</label> <br>
             </div>
-            <button type="submit" id="setAgeGroup" style="width: 74%; font-size: 100%; font-weight: 700; margin-left: 13%; margin-top: 6%;">Set Age Group</button>
+            <button type="submit" id="setAgeGroup" style="width: 74%; font-size: 100%; font-weight: 700; margin-left: 13%; margin-top: 6%;" onclick="confirm()">Set Age Group</button>
         </form>
     </div>
 </div>
@@ -1115,13 +1107,23 @@ body img{
     </div>
 </div>
 
+<div id="signUpConfirmation" class="emailSentSuccess Popup" style="width: 106%;">
+    {% csrf_token %}
+<div class="popup-content">
+    <h3>Confirm Registration &nbsp;<i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
+    <h5>Dear gamer, we have sent you a link to your registered email to confirm your registeration . Please check your inbox, including your spam folder, and follow the link to complete your registering confirmation.</h5>
+    <h7>If you haven't received an email, please ensure that your registered with Game Geek using a correct email address. If the issue persists, don't hesitate to contact us for assistance!</h7>
+    <h7>Back to <a id="next-button" href="{% url 'signup' %}">Sign up</a></h7>
+</div>
+</div>
+
 <script>
 if (status === 'done') {
     // Display done pop-up
     document.getElementById('done').style.display = 'block';
     document.getElementById("instructions").style.display = "none";
     document.getElementById('send').style.display = 'none';
-} 
+}
 else if (status === 'error'){
     // Display error pop-up
     document.getElementById('send').style.display = 'none';
@@ -1131,6 +1133,12 @@ else if (status === 'error'){
 else if (status === 'confirm'){
     document.getElementById("instructions").style.display = "none";
     document.getElementById('ageGroupConfirm').style.display = 'block';
+}
+
+else if (status === 'verify'){
+    confirm();
+document.getElementById("instructions").style.display = "none";
+
 }
 function sendRequest() {
 var csrftoken = getCookie('csrftoken');
@@ -1178,6 +1186,39 @@ xhr.onload = function () {
     }
 };
 
+xhr.send();
+}
+
+function confirm() {
+var csrftoken = getCookie('csrftoken');
+var xhr = new XMLHttpRequest();
+xhr.open('POST', "{% url 'custom_signup_confirmation' %}", true);
+xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+
+// Set the CSRF token and session ID in the request headers
+xhr.setRequestHeader("X-CSRFToken", csrftoken);
+
+xhr.onload = function () {
+
+    if (xhr.status === 200) {
+
+        document.getElementById('signUpConfirmation').style.display = 'block';
+        document.getElementById("instructions").style.display = "none";
+        document.getElementById('send').style.display = 'none';
+        document.getElementById("classified").style.display = "none";
+        document.getElementById("ageGroupConfirm").style.display = "none";
+
+
+    } else if (xhr.status === 404) {
+        document.getElementById('signUpConfirmation').style.display = 'none';
+        document.getElementById('send').style.display = 'none';
+        document.getElementById("instructions").style.display = "none";
+        document.getElementById('errorPopUp').style.display = 'block';
+
+    }
+};
 xhr.send();
 }
 // Function to get the CSRF token from the cookie
