--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -572,7 +572,24 @@ $.ajax({
             imageElement.src = gameData.Icon_URL; // Use the actual property from your game data
         }
 
-        document.querySelector('.Lang').innerHTML = '<strong>Languages:</strong> ' + gameData.Languages;
+
+     var languages = gameData.Languages.split(', '); // Convert to array assuming it's a string separated by ', '
+var othersIndex = languages.indexOf('Others');
+
+// If 'Others' exists in the array, move it to the end
+if (othersIndex !== -1) {
+    var othersLanguage = languages.splice(othersIndex, 1)[0]; // Remove 'Others' from its current position
+    languages.push(othersLanguage); // Append 'Others' to the end
+}
+
+// Join the array elements to form the string
+var languagesString = languages.join(', ');
+
+// Remove the period from within the string
+languagesString = languagesString.replace('.', '');
+
+// Update the HTML
+document.querySelector('.Lang').innerHTML = '<strong>Languages:</strong> ' + languagesString+'.';
         document.querySelector('.rDate').innerHTML = '<strong>Release Date:</strong> ' + gameData.Original_Release_Date+'.';
         document.querySelector('.Developer').innerHTML = '<strong>Developer:</strong> ' + gameData.Developer;
         document.querySelector('.age').innerHTML = '<strong>Age Rating:</strong> ' + gameData.Age_Rating+'.';
